BusOne/src/objects/Signature_Page_vod__c.object
<CustomObject>
    <description>Contains configurable attributes of the Signature Pages used by Veeva CRM application</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Disclaimer is active and available to be displayed on the Signature page.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Country for which the Disclaimer text pertains to. The Signature page displays the Disclaimer where there is a match to the Country field on Account.</description>
        <label>Disclaimer Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Signature Pages</relationshipLabel>
        <relationshipName>Signature_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Text_vod__c</fullName>
        <description>The text that is displayed on the Signature page when capturing a signature for a record</description>
        <label>Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>Optional field used by Customer to identify and load Disclaimers.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>The language that the text is displayed in. It is recommended that the value of this field should be formatted to match the Salesforce supported languages.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>bg</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>hr</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>iw</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>pt_PT</fullName>
                </value>
                <value>
                    <fullName>ro</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sk</fullName>
                </value>
                <value>
                    <fullName>sl</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Page_vod__c</fullName>
        <description>The Signature page for which the Disclaimer is used.</description>
        <label>Signature Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Content_Acknowledgement_vod</fullName>
                </value>
                <value>
                    <fullName>Approved_Email_Consent_vod</fullName>
                </value>
                <value>
                    <fullName>Call_Sample_vod</fullName>
                </value>
                <value>
                    <fullName>Call_Detail_vod</fullName>
                </value>
                <value>
                    <fullName>Call_Acknowledgement_vod</fullName>
                </value>
                <value>
                    <fullName>Contract_vod</fullName>
                </value>
                <value>
                    <fullName>Medical_Inquiry_vod</fullName>
                </value>
                <value>
                    <fullName>Order_vod</fullName>
                </value>
                <value>
                    <fullName>Sample_Consent_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Signature Page</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signature Pages</pluralLabel>
    <recordTypes>
        <fullName>Consent_vod</fullName>
        <active>true</active>
        <description>Record type to define the Consent displayed on the Signature page for a Consent record.</description>
        <label>Consent_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disclaimer_vod</fullName>
        <active>true</active>
        <description>Record type to define the Disclaimer displayed on the Signature page.</description>
        <label>Disclaimer_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>